@@ -32,8 +32,8 @@ mi_interp_stack_changed_hook (void)
   struct ui_out *saved_ui_out = uiout;
   struct mi_out *tmp_mi_out;
 
-  if (gdb_current_interpreter_is_named (GDB_INTERPRETER_MI0))
-    uiout = gdb_interpreter_ui_out (mi0_interp);
+  if (gdb_current_interpreter_is_named (GDB_INTERPRETER_MI1))
+    uiout = gdb_interpreter_ui_out (mi1_interp);
   else
     uiout = gdb_interpreter_ui_out (mi_interp);
 
@@ -48,8 +48,8 @@ event_notify (const char *string, ...)
 {
   va_list args;
 
-  if (!gdb_current_interpreter_is_named (GDB_INTERPRETER_MI0)
-      && !gdb_current_interpreter_is_named (GDB_INTERPRETER_MI1))
+  if (!gdb_current_interpreter_is_named (GDB_INTERPRETER_MI1)
+      && !gdb_current_interpreter_is_named (GDB_INTERPRETER_MI2))
     {
       va_start (args, string);
       vfprintf_unfiltered (mi_event_channel, string, args);
